# lerobot_ws

./: .gitignore
src/lerobot_description/: CMakeLists.txt
src/lerobot_description/launch/: so101_gazebo.launch.py
src/lerobot_description/worlds/: pick_world.sdf
src/lerobot_moveit/config/: moveit.rviz
src/lerobot_pick/: CMakeLists.txt  package.xml
src/lerobot_pick/config/: moveit_cpp.yaml
src/lerobot_pick/launch/: pick_cube.launch.py
src/lerobot_pick/src/: pick_cube.cpp
src/lerobot_tasks/: package.xml  setup.cfg  setup.py
src/lerobot_tasks/launch/: pick_cube.launch.py
src/lerobot_tasks/lerobot_tasks/: pick_cube.py
